# merge-mkv-gui

./: .gitignore  CMakeLists.txt  README.md  repository.xml
src/: CMakeLists.txt  app.cpp  app.manifest  app.rc  drop-box.cpp  drop-box.hpp  folder-input.cpp  folder-input.hpp  internal-update.hpp  main-frame.cpp  main-frame.hpp  mkv-merge-tool.cpp  mkv-merge-tool.hpp  pch.hpp  process-mkv.cpp  process-mkv.hpp  string-utils.cpp  string-utils.hpp  thread-pool.hpp
